--- a/css/css.css
+++ b/css/css.css
@@ -102,6 +102,9 @@ input[type=text],input[type=password]
 {
 	display:none;
 }
+#left .s a{
+	background-color: lightblue;
+}
 div.ww:hover > div.s
 {
 	display:block;
